# tanca-android-legacy

./: .gitignore  .gitmodules  CHANGELOG  README.md  build.gradle  gen_efs_android.sh  local.properties  package-lock.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  BackendServer.cpp  BackendServer.h  CMakeLists.txt  README.md  http_server.cpp  http_server.h  main_backend.cpp
app/src/main/java/eu/d8s/Tanca/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
fastlane/: Appfile
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
host/: CMakeLists.txt  main_backend.cpp
metadata/: eu.d8s.Tanca.yml  tanca.yml
